<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YFTsnd</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_username">邮箱/手机/用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_guest">随便逛逛</string>

    
    <color name="tab_mainblue">#2f71b4</color>
    <color name="tab_textselected">#fe5636</color>
    <color name="divider_v_grey">#e0e1e2</color>
    
</resources>
