<?xml version="1.0" encoding="utf-8"?>
<com.qfc.yft.ui.custom.JackResizeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/img_login_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:contentDescription="@id/img_login_bg"
        android:src="@drawable/loginbgtop"
        android:layout_alignParentTop="true"
        />
	
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/loginbgbottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/v_padding_login_down"
        android:paddingTop="@dimen/v_padding_login_up" >

        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/v_height_edit"
            android:digits="qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM!@#$%^*()_+-=[];'/\{}|?"
			android:hint="@string/login_username"
			android:background="@drawable/edittext_bg"
			android:paddingLeft="10dp"
			android:textSize="18sp"
			android:layout_margin="@dimen/h_margin_side"
            />
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/v_height_edit"
            android:inputType="textPassword"
	        android:background="@drawable/edittext_bg"
	        android:hint="@string/login_password"
	        android:paddingLeft="10dp"
	        android:textSize="18sp"
	        android:imeOptions="actionSend"
	        android:layout_margin="@dimen/h_margin_side"
            />
        <Button
	        android:id="@+id/btn_log"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/v_height_edit"
	        android:text="@string/login_login"
	        android:gravity="center"
	        android:clickable="true"
	        android:background="@drawable/btn_login_bg"
	        android:textColor="#fff" 
	        android:textSize="18sp"
	        android:layout_margin="@dimen/h_margin_side"
        />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/h_margin_side"
            >
            
            <TextView 
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#2f71b4"
                android:textSize="@dimen/textsize_register"
                android:layout_marginLeft="@dimen/h_margin_side"
                />
            <TextView 
                android:id="@+id/tv_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_guest"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="#2f71b4"
                android:textSize="@dimen/textsize_register"
                android:layout_marginRight="@dimen/h_margin_side"
                />
            
        </LinearLayout>
        
    </LinearLayout>
    
</com.qfc.yft.ui.custom.JackResizeLayout>
